fix jumping header

--- a/src/scss/3-modules/general/_header.scss
+++ b/src/scss/3-modules/general/_header.scss
@@ -5,7 +5,7 @@
 }
 
 .header-placeholder{
-  height: 81px;
+  height: 68px;
   display: none;
 }
 
